--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "@types/styled-components-react-native": "^5.1.3",
     "typescript": "~4.3.5"
   },
+  "resolutions": {
+    "@types/react": "^17"
+  },
   "private": true
+  
 }
